layout issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,12 +36,8 @@ body {
 }
 /* navigation */ 
 .navMaster {
-  position: absolute;
   text-align: center;
-  left: 0;
-  width: 100%;
-  height: 5vh;
-  margin-top: 2vh;
+  
   z-index: 99;
   
   border: 2px solid #3acaec;
@@ -57,32 +53,25 @@ body {
   color: white;
 }
 .navButton:hover {
-  color: white;
+  color: black;
+  font-weight: bolder;
   text-decoration: none;
-  background-color: red;
+  background: #3acaec;
 }
 /* nav end */ 
 .bar {
   color: white;
   font-size: 30px;
-  position: fixed;
+  
   text-align: center;
-  left: 0;
-  bottom: 0;
-  text-align: center;
-  width: 30%;
+
+ border-radius: 50px;
+  
   z-index: 99;
   background: #191919;
   box-shadow: 0px 0px 15px 2px #7Cbdbd inset;
 }
-.barSpacer{
-  position: fixed;
-  text-align: center;
-  left: 0;
-  bottom: 0;
-  text-align: center;
-  width: 30%;
-}
+
 .backgroundclass {
   background-color: black;
     position: fixed;
